apps/whoami/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authentik-whoami
  namespace: nori-cloud
  labels:
    app: whoami
spec:
  forwardAuth:
    address: "http://authentik-server.authentik/outpost.goauthentik.io/auth/traefik"
    trustForwardHeader: true
    authResponseHeaders:
      - X-authentik-username
      - X-authentik-email
      - X-authentik-uid
