apps/whoami/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: nori-cloud
  labels:
    app: whoami
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  selector:
    app: whoami
  ports:
    - port: 80
      targetPort: 80
      name: http
