apps/whoami/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: nori-cloud
  labels:
    app: whoami
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`whoami.norriswu.me`)
      kind: Rule
      services:
        - name: whoami
          port: 80
      middlewares:
        - name: authentik-whoami
